--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,154 @@
+@import './../node_modules/highlight.js/styles/default.css';
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App__body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+}
+
+.Footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0;
+  background-color: steelblue;
+  width: 100%;
+  height: 50px;
+}
+
+.Header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0;
+  background-color: steelblue;
+  width: 100%;
+  height: 50px;
+}
+
+.Header h1 {
+  height: 100%;
+  margin: 0;
+  padding-left: 0.5rem;
+  font-size: 1.5rem;
+  line-height: 3rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Git__icon {
+  margin: auto 0.25rem;
+  transform: scale(1);
+  opacity: 0.9;
+  transition: all 0.2s ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.Git__icon:hover {
+  cursor: pointer;
+  transform: scale(1.3);
+  opacity: 1;
+}
+
+.Header__Github {
+  height: 100%;
+  margin: 0;
+  padding-right: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  color: white;
+}
+
+.Header__Github h1 {
+  font-size: 1rem;
+  line-height: 3rem;
+  color: white;
+}
+
+.Source__body {
+  width: 50%;
+  height: 100vh;
+  border: 1px solid rgb(200, 200, 200);
+}
+
+.Target__body {
+  width: 50%;
+  height: 100vh;
+  border: 1px solid rgb(200, 200, 200);
+  border-left: none;
+}
+
+.Left {
+  text-align: left;
+}
+
+.Source__field {
+  padding: 1rem;
+  width: -webkit-fill-available;
+  display: inline-grid;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.Form__label {
+  text-align: left;
+  margin-top: 1rem !important;
+    margin-bottom: 0.25rem !important;
+
+}
+.Form__submit {
+margin-top: 1rem;
+}
+
+.Form__field {
+  margin-bottom: 0 !important;
+  border-radius: 5px !important;
+  min-height: 1.5rem !important;
+}
+
+.Form_error {
+  color: red;
+}
+
+.Source__field textarea {
+  height: 70vh;
+  margin-bottom: 1rem;
+}
+
+.Target__selector {
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(219, 219, 219);
+  border-left: none;
+  border-right: none;
+  height: 2rem;
+  width: auto;
+  padding: 0.25rem;
+  justify-content: space-around;
+  border: 1px solid rgb(200, 200, 200);
+}
+
+.invalid {
+  background-color: #ffecec !important;
+  /* height: fit-content !important; */
+}
+
+@media only screen and (max-width: 600px) {
+  .App__body {
+    flex-wrap: wrap;
   }
-  to {
-    transform: rotate(360deg);
+
+  .Source__body {
+    width: 100%;
+    height: 50vh;
+  }
+
+  .Target__body {
+    width: 100%;
+    height: 50vh;
   }
 }
